# storage/docs/api-docs.json
@@ -307,6 +307,47 @@
                 }
             }
         },
+        "/film/getFilmWithGenre/{id}": {
+            "get": {
+                "tags": [
+                    "film"
+                ],
+                "summary": "Finds film with genre",
+                "description": "return a film with genre",
+                "operationId": "getFilmWithGenre",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "parameters": [
+                    {
+                        "name": "id",
+                        "in": "path",
+                        "required": true,
+                        "type": "integer"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "successful operation",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/Film"
+                            }
+                        }
+                    },
+                    "400": {
+                        "description": "Invalid Id supplied"
+                    },
+                    "404": {
+                        "description": "genre not found"
+                    }
+                }
+            }
+        },
         "/genre": {
             "get": {
                 "tags": [
@@ -489,6 +530,282 @@
                     }
                 ]
             }
+        },
+        "/Personne": {
+            "get": {
+                "tags": [
+                    "personne"
+                ],
+                "summary": "Display a list of Personne.",
+                "description": "Diplaying a list of six personnes",
+                "operationId": "getPersonne",
+                "produces": [
+                    "application/json"
+                ],
+                "responses": {
+                    "200": {
+                        "description": "successful operation",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/Personne"
+                            }
+                        }
+                    }
+                }
+            },
+            "post": {
+                "tags": [
+                    "personne"
+                ],
+                "summary": "add 1 personne.",
+                "description": "This is to insert a personne",
+                "operationId": "addPersonne",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "parameters": [
+                    {
+                        "name": "nom",
+                        "in": "formData",
+                        "description": "Personne's lastname you want to update",
+                        "required": true,
+                        "type": "string"
+                    },
+                    {
+                        "name": "prenom",
+                        "in": "formData",
+                        "description": "Personne's firstname you want to update",
+                        "required": true,
+                        "type": "string"
+                    },
+                    {
+                        "name": "date_naissance",
+                        "in": "formData",
+                        "description": "Personne's birthday you want to update",
+                        "required": true,
+                        "type": "string",
+                        "format": "date"
+                    },
+                    {
+                        "name": "email",
+                        "in": "formData",
+                        "description": "Personne's email you want to update",
+                        "required": true,
+                        "type": "string"
+                    },
+                    {
+                        "name": "adresse",
+                        "in": "formData",
+                        "description": "the fields you want to update",
+                        "required": false,
+                        "type": "string"
+                    },
+                    {
+                        "name": "cpostal",
+                        "in": "formData",
+                        "description": "Personne's code postal you want to update",
+                        "required": true,
+                        "type": "string"
+                    },
+                    {
+                        "name": "ville",
+                        "in": "formData",
+                        "description": "Personne's ville you want to update",
+                        "required": true,
+                        "type": "string"
+                    },
+                    {
+                        "name": "pays",
+                        "in": "formData",
+                        "description": "Personne's country you want to update",
+                        "required": true,
+                        "type": "string"
+                    }
+                ],
+                "responses": {
+                    "201": {
+                        "description": "successful operation",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/Personne"
+                            }
+                        }
+                    },
+                    "405": {
+                        "description": "Invalid input"
+                    }
+                }
+            }
+        },
+        "/personne/{personneId}": {
+            "get": {
+                "tags": [
+                    "personne"
+                ],
+                "summary": "show 1 row",
+                "description": "Show one Personne",
+                "operationId": "getPersonneById",
+                "produces": [
+                    "application/json"
+                ],
+                "parameters": [
+                    {
+                        "name": "personneId",
+                        "in": "path",
+                        "description": "ID of personne that needs to be fetched",
+                        "required": true,
+                        "type": "integer",
+                        "format": "int64"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "successful operation",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/Personne"
+                            }
+                        }
+                    },
+                    "400": {
+                        "description": "Invalid ID supplied"
+                    },
+                    "404": {
+                        "description": "Personne not found"
+                    }
+                }
+            },
+            "put": {
+                "tags": [
+                    "personne"
+                ],
+                "summary": "Update an existing personne",
+                "description": "",
+                "operationId": "updatePersonne",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "parameters": [
+                    {
+                        "name": "personneId",
+                        "in": "path",
+                        "description": "Personne object that needs to be added to the store",
+                        "required": true,
+                        "type": "integer"
+                    },
+                    {
+                        "name": "nom",
+                        "in": "formData",
+                        "description": "Personne's lastname you want to update",
+                        "required": true,
+                        "type": "string"
+                    },
+                    {
+                        "name": "prenom",
+                        "in": "formData",
+                        "description": "Personne's firstname you want to update",
+                        "required": true,
+                        "type": "string"
+                    },
+                    {
+                        "name": "date_naissance",
+                        "in": "formData",
+                        "description": "Personne's birthday you want to update",
+                        "required": true,
+                        "type": "string",
+                        "format": "date"
+                    },
+                    {
+                        "name": "email",
+                        "in": "formData",
+                        "description": "Personne's email you want to update",
+                        "required": true,
+                        "type": "string"
+                    },
+                    {
+                        "name": "adresse",
+                        "in": "formData",
+                        "description": "the fields you want to update",
+                        "required": false,
+                        "type": "string"
+                    },
+                    {
+                        "name": "cpostal",
+                        "in": "formData",
+                        "description": "Personne's code postal you want to update",
+                        "required": true,
+                        "type": "string"
+                    },
+                    {
+                        "name": "ville",
+                        "in": "formData",
+                        "description": "Personne's ville you want to update",
+                        "required": true,
+                        "type": "string"
+                    },
+                    {
+                        "name": "pays",
+                        "in": "formData",
+                        "description": "Personne's country you want to update",
+                        "required": true,
+                        "type": "integer"
+                    }
+                ],
+                "responses": {
+                    "201": {
+                        "description": "Invalid ID supplied",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/Personne"
+                            }
+                        }
+                    },
+                    "400": {
+                        "description": "Invalid ID supplied"
+                    },
+                    "404": {
+                        "description": "Personne not found"
+                    }
+                }
+            },
+            "delete": {
+                "tags": [
+                    "personne"
+                ],
+                "summary": "Delete purchase order by ID",
+                "description": "For valid response try integer IDs with value < 1000. Anything above 1000 or nonintegers will generate API errors",
+                "operationId": "deletePersonne",
+                "produces": [
+                    "application/json"
+                ],
+                "parameters": [
+                    {
+                        "name": "personneId",
+                        "in": "path",
+                        "description": "ID of the order that needs to be deleted",
+                        "required": true,
+                        "type": "string"
+                    }
+                ],
+                "responses": {
+                    "400": {
+                        "description": "Invalid ID supplied"
+                    },
+                    "404": {
+                        "description": "Order not found"
+                    }
+                }
+            }
         }
     },
     "definitions": {
@@ -528,6 +845,38 @@
                 "name": "Film"
             }
         },
+        "Fonction": {
+            "required": true,
+            "properties": {
+                "id_film": {
+                    "type": "integer",
+                    "format": "int64"
+                },
+                "titre": {
+                    "type": "string"
+                },
+                "resum": {
+                    "type": "string"
+                },
+                "date_debut_affiche": {
+                    "type": "string",
+                    "format": "date"
+                },
+                "date_fin_affiche": {
+                    "type": "string",
+                    "format": "date"
+                },
+                "duree_minutes": {
+                    "type": "integer"
+                },
+                "annee_production": {
+                    "type": "integer"
+                }
+            },
+            "xml": {
+                "name": "Film"
+            }
+        },
         "Genre": {
             "required": true,
             "properties": {
@@ -543,6 +892,55 @@
             },
             "xml": {
                 "name": "Genre"
+            }
+        },
+        "Personne": {
+            "required": [
+                "id_personne",
+                "nom",
+                "prenom",
+                "date_naissance",
+                "email",
+                "cpostal",
+                "ville",
+                "pays"
+            ],
+            "properties": {
+                "id_personne": {
+                    "type": "integer",
+                    "format": "int64"
+                },
+                "nom": {
+                    "type": "string"
+                },
+                "prenom": {
+                    "type": "string"
+                },
+                "date_naissance": {
+                    "type": "string",
+                    "format": "date"
+                },
+                "email": {
+                    "type": "string"
+                },
+                "adresse": {
+                    "type": "string"
+                },
+                "cpostal": {
+                    "type": "string"
+                },
+                "ville": {
+                    "type": "string"
+                },
+                "pays": {
+                    "type": "string"
+                },
+                "fonctions": {
+                    "$ref": "#/definitions/Fonction"
+                }
+            },
+            "xml": {
+                "name": "Personne"
             }
         }
     }
